--- a/gdrive-api/package.json
+++ b/gdrive-api/package.json
@@ -17,9 +17,14 @@
     "jest": "^27.1.0"
   },
   "dependencies": {
+    "busboy": "^0.3.1",
+    "form-data": "4.0",
     "pino": "6.8",
     "pino-pretty": "5.1",
     "pretty-bytes": "5.6",
     "socket.io": "4.1"
+  },
+  "engines": {
+    "node": "16"
   }
 }
