--- a/gdrive-web/package.json
+++ b/gdrive-web/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npx http-server public"
+    "start": "npx http-server public",
+    "dev": "npx http-server public --cert certificates/cert.pem --key certificates/key.pem --ssl -o"
   },
   "keywords": [],
   "author": "devzgabriel",
